--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Catena Development Suite",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "npm-run-all build:*",
+    "build:ganache": "cd lib/ganache && npm install && npm run compile:web && cd ../..",
+    "build:remix": "cd lib/remix-ide && npm install && npm run build && cd ../.."
   },
   "repository": {
     "type": "git",
@@ -20,6 +24,11 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/bitaccess/catena-dev-suite#readme",
   "dependencies": {
-    "ganache": "github:explorecatena/ganache#browser"
+    "express": "^4.16.3",
+    "http-proxy-middleware": "^0.17.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.1",
+    "npm-run-all": "^4.1.2"
   }
 }
