--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "nunjucks": "^3.1.2"
   },
   "devDependencies": {
+    "concurrently": "^3.5.1",
+    "cross-env": "^5.1.4",
     "nodemon": "^1.17.1",
     "npm-run-all": "^4.1.2"
   }
