Add submodules as dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "dev:main": "nodemon -i lib -e js index.js",
     "dev:ganache": "cd lib/ganache && cross-env WEBPACK_PORT=8081 npm run dev:web",
     "dev:remix": "cd lib/remix-ide && npm run watch",
-    "postinstall": "run-p -l install:*",
     "install:ganache": "cd lib/ganache && npm install",
     "install:remix": "cd lib/remix-ide && npm install",
     "build": "run-p -l build:*",
@@ -31,8 +30,10 @@
   "homepage": "https://bitbucket.org/bitaccess/catena-dev-suite#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "ganache": "file:lib/ganache",
     "http-proxy-middleware": "^0.17.4",
     "nunjucks": "^3.1.2",
+    "remix-ide": "file:lib/remix-ide",
     "web3": "^0.20.6"
   },
   "devDependencies": {
