--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = catena
 [submodule "lib/remix-ide"]
 	path = lib/remix-ide
-	url = git@bitbucket.org:bitaccess/remix-ide.git
+	url = git@github.com:explorecatena/remix-ide.git
 	branch = catena
